--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/portfolio.css">
     <link rel="stylesheet" href="/css/Mobile.css">
+    <link rel="stylesheet" href="/css/navbar-fixed.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <title>Emon's Portfolio</title>
 </head>
 <body>
     <!-- Navbar Start here -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbg">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="navbg">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,7 +67,7 @@
     <!-- Home part ends -->
 
     <!-- about section start here -->
-    <div class="about-container min-vh-100 " id="about">
+    <div class="about-container min-vh-100 d-flex align-items-center justify-content-center" id="about">
       <div class="container">
         <h1 class="text-weight-bolder text-center py-4 text-dark"> About Me </h1>
         <div class="row">
@@ -182,7 +184,82 @@
 </div>
 
     <!-- service section ends -->
+    
+    <!-- portfolio section start -->
+    <div class="portfolio-container min-vh-100" id="portfolio">
+      <div class="container">
+        <h4 class="text-center fs-1 text-dark fw-bolder"> Latest Work </h4>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage691X460.jpg" class="img-thumbnail img-fluid img-h-w" alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Programming </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
 
-<script src="/js/bootstrap.bundle.min.js"></script>    
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage480X720.jpg" class="img-thumbnail img-fluid img-h-w" alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Phtography </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage660X371.jpg" class="img-thumbnail img-fluid img-h-w"alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Keyboard Layout </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage774X516.jpg" class="img-thumbnail img-fluid img-h-w"alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Hardware Engineering </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage766X510.jpg" class="img-thumbnail img-fluid img-h-w"alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Team Work </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="portfolio-item">
+              <img src="/img/ResizerImage580X386.jpg" class="img-thumbnail img-fluid img-h-w"alt="portfolio-item">
+              <h4 class="fs-5 pt-3"> Spekear </h4>
+              <a href="#" class="text-decoration-none"><p class=" text-danger">Live demo</p></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- portfolio section ends -->
+
+    <!-- Freelencer section start -->
+      <div class="freelencer-container py-5 bg-danger">
+        <div class="container-lg py-4">
+          <div class="row justify-content-center">
+            <div class="col text-center">
+              <div class="freelencer-item">
+                <p class="text-white pt-4"> Do you have any project ?</p>
+                <h3 class="text-white fs-2 fw-bold"> I'm available to do your project </h3>
+                <a href="#contact"class="btn btn-outline-success bg-dark mt-3"> Hire Me </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- Freelencer section end -->
+<script src="/js/bootstrap.bundle.min.js"></script>
+<script src="/js/navbar-fixed.js"></script>
+<script src="/js/fixed-top-animated-menu.1.0.js"></script>
+<script src="/js/Jquery1.11.1.min.js"></script>
 </body>
 </html>
